--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,11 +81,13 @@ flutter:
         - asset: assets/Fonts/TiroDevanagariHindi-Regular.ttf
         - asset: assets/Fonts/TiroDevanagariHindi-Italic.ttf
           style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+    - family: Poppins
+      fonts:
+        - asset: assets/Fonts/Poppins-Regular.ttf
+    - family: Rock
+      fonts:
+        - asset: assets/Fonts/Rock3D-Regular.ttf
+    
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
